--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -205,11 +205,24 @@
     <Compile Include="Migrations\201712192048187_AddIsSubscribedToCustomer.Designer.cs">
       <DependentUpon>201712192048187_AddIsSubscribedToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712200224492_AddMembershipType.cs" />
+    <Compile Include="Migrations\201712200224492_AddMembershipType.Designer.cs">
+      <DependentUpon>201712200224492_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712200236026_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201712200236026_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201712200236026_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712200512448_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201712200512448_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201712200512448_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -301,6 +314,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712192048187_AddIsSubscribedToCustomer.resx">
       <DependentUpon>201712192048187_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712200224492_AddMembershipType.resx">
+      <DependentUpon>201712200224492_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712200236026_PopulateMembershipTypes.resx">
+      <DependentUpon>201712200236026_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712200512448_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201712200512448_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
