--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -233,9 +233,22 @@
     <Compile Include="Migrations\201712200701129_SetNameOfMembershipTypes.Designer.cs">
       <DependentUpon>201712200701129_SetNameOfMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712200712029_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201712200712029_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201712200712029_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712200715294_UpdateBirthdayForCustomers.cs" />
+    <Compile Include="Migrations\201712200715294_UpdateBirthdayForCustomers.Designer.cs">
+      <DependentUpon>201712200715294_UpdateBirthdayForCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712200746322_AddMovie.cs" />
+    <Compile Include="Migrations\201712200746322_AddMovie.Designer.cs">
+      <DependentUpon>201712200746322_AddMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -307,6 +320,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -351,6 +365,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712200701129_SetNameOfMembershipTypes.resx">
       <DependentUpon>201712200701129_SetNameOfMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712200712029_AddBirthdateToCustomer.resx">
+      <DependentUpon>201712200712029_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712200715294_UpdateBirthdayForCustomers.resx">
+      <DependentUpon>201712200715294_UpdateBirthdayForCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712200746322_AddMovie.resx">
+      <DependentUpon>201712200746322_AddMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
