--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -265,6 +265,18 @@
     <Compile Include="Migrations\201712200746322_AddMovie.Designer.cs">
       <DependentUpon>201712200746322_AddMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712260240297_RemovingRegisteredUsers.cs" />
+    <Compile Include="Migrations\201712260240297_RemovingRegisteredUsers.Designer.cs">
+      <DependentUpon>201712260240297_RemovingRegisteredUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712260243478_RemoveGuestUser.cs" />
+    <Compile Include="Migrations\201712260243478_RemoveGuestUser.Designer.cs">
+      <DependentUpon>201712260243478_RemoveGuestUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712260301527_SeedUsers.cs" />
+    <Compile Include="Migrations\201712260301527_SeedUsers.Designer.cs">
+      <DependentUpon>201712260301527_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -517,10 +529,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -574,6 +587,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712200746322_AddMovie.resx">
       <DependentUpon>201712200746322_AddMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712260240297_RemovingRegisteredUsers.resx">
+      <DependentUpon>201712260240297_RemovingRegisteredUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712260243478_RemoveGuestUser.resx">
+      <DependentUpon>201712260243478_RemoveGuestUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712260301527_SeedUsers.resx">
+      <DependentUpon>201712260301527_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
