--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -277,6 +277,10 @@
     <Compile Include="Migrations\201712260301527_SeedUsers.Designer.cs">
       <DependentUpon>201712260301527_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712260342165_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201712260342165_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201712260342165_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -597,6 +601,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712260301527_SeedUsers.resx">
       <DependentUpon>201712260301527_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712260342165_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201712260342165_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
