Extract ApplicationDbContext and Application user into two seperate classes. Error can't use ApplicationUser as a parameter in IdentityDbContext, since there is no implicit reference conversion from ApplicationUser to IdentityUser.

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -285,7 +285,8 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Genre.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\IdentityModels\ApplicationUser.cs" />
+    <Compile Include="Models\IdentityModels\ApplicationDbContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
