Add Phone as property in ApplicationUser, add migration, then add phone as property for Registration, external and Regular. Add the Phone property to the ViewModels related to Register and ExternalRegistrationConfirmation. Then set the Phone property for newly registered user in the ApplicationController in both the Register and ExternalLoginConfirmation actions.

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -281,6 +281,10 @@
     <Compile Include="Migrations\201712260342165_AddDrivingLicenseToApplicationUser.Designer.cs">
       <DependentUpon>201712260342165_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712262004399_AddPhoneToApplicationUser.cs" />
+    <Compile Include="Migrations\201712262004399_AddPhoneToApplicationUser.Designer.cs">
+      <DependentUpon>201712262004399_AddPhoneToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -605,6 +609,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712260342165_AddDrivingLicenseToApplicationUser.resx">
       <DependentUpon>201712260342165_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712262004399_AddPhoneToApplicationUser.resx">
+      <DependentUpon>201712262004399_AddPhoneToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
